feat(katalog): WB-uslub xususiyatlar shajarasi — kategoriya daraxti + atributlar tizimi
Backend (V26): attributes/attribute_options/category_attributes/product_attribute_values
jadvallari, kategoriyaga icon+sort_order, atribut merosi (ota->bola), JPA Specification
filtrlash dvijoki (kategoriya subtree + attrs guruhli filtr), ommaviy GET /v1/catalog/facets
(kategoriya daraxti, narx diapazoni, variant hisoblagichli filtrlar).

Admin: Kategoriyalar (daraxt CRUD, tartiblash, ikonka, atribut biriktirish + meros ko'rinishi),
Xususiyatlar (avto-slug, variantlar muharriri, ishlatilish statistikasi), Brendlar (yangi CRUD),
mahsulot formasida dinamik xususiyatlar (majburiylik nazorati), guruhlangan sidebar
(Katalog/Savdo/Ta'minot/Tahlil/Boshqaruv, localStorage collapse, "Do'konni ochish").

Demo seed: Shinalar/Disklar/Aksessuarlar shajarasi, 9 atribut + qiymatlar.